@@ -1,4 +1,7 @@
 
+- Added convenience methods for setting and getting title and org fiels (thanks
+  to Jade Meskill for providing the patch).
+
 - Modified Icalendar#create2 so only prodid can be supplied and cal is yielded
   so events/etc. can be pushed.
 
